--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,12 @@ body {
     height: 100%;
 }
 
+img {
+    width: 100%;
+}
+
 #cover {
-    background: #222 url('img/stars.jpg') center center no-repeat;
+    background: #222 url('img/game.jpg') center center no-repeat;
     background-size: cover;
     color: white;
     height: 100%;
@@ -25,4 +29,30 @@ body {
 .carousel .carousel-item > img {
     width: 100%;
     height: 100%;
+}
+
+.card-header {
+    background-color: #fff;
+}
+
+.section-content {
+    padding: 5rem 0;
+}
+
+#about {
+    background: url('img/hobby.jpg') center center no-repeat;
+    background-size: cover;
+}
+
+.about-text {
+    background: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: 1.875rem;
+}
+
+#footer-main {
+    background: #222;
+    color: white;
+    font-size: 0.8rem;
+    padding: 2.5rem 0;
 }
